# okane-api

./: README.md  main.py  pyproject.toml  pyrightconfig.json
App/Api/: apps.py  urls.py
App/Api/api/: accounts.py  base.py  users.py
App/Client/: apps.py  urls.py
App/Client/views/: auth.py  dashboard.py
Models/Accounts/: apps.py  urls.py
Models/Accounts/migrations/: 0001_initial.py  0002_initial.py
Models/Accounts/models/: Account.py  __init__.py
Models/Accounts/schemas/: AccountSchema.py  __init__.py
Models/Transactions/: apps.py  urls.py
Models/Transactions/migrations/: 0001_initial.py  0002_initial.py
Models/Transactions/models/: Category.py  JournalEntry.py  Transaction.py  __init__.py
Models/Transactions/schemas/: CategorySchema.py  JournalEntrySchema.py  TransactionSchema.py  __init__.py
Models/Users/: api.py  apps.py  urls.py
Models/Users/migrations/: 0001_initial.py
Models/Users/models/: User.py
Models/Users/schemas/: UserSchema.py  __init__.py
okane/: BaseModel.py  BaseView.py  appsConfig.py  asgi.py  registry.py  settings.py  urls.py  wsgi.py
static_files/okane-static/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
static_files/okane-static/src/: main.ts  style.css
templates/cotton/badge/: index.html
templates/cotton/button/: index.html
templates/cotton/card/: content.html  footer.html  header.html  index.html
templates/cotton/form/: error.html  index.html
templates/cotton/header/: section.html
templates/cotton/icon/: index.html
templates/cotton/input/: index.html
templates/cotton/layout/: base.html  (+1 more)
(+7 files in other folders)
