[project]
name = "okane-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.15",
    "django-cleanup>=9.0.0",
    "django-cotton>=2.7.2",
    "django-environ>=0.14.0",
    "django-htmx>=1.27.0",
    "django-ninja>=1.6.2",
    "django-storages[azure]>=1.14.6",
    "django-stubs>=6.0.6",
    "django-widget-tweaks>=1.5.1",
    "djangosetupheist>=0.6.3",
    "psycopg2-binary>=2.9.12",
    "uvicorn>=0.50.2",
]
